Add redkale-vertx db test